some formatting changes in editor activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,20 @@
         android:theme="@style/AppTheme">
         <activity android:name=".CatalogActivity"
             android:label="inventory">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        android:name=".EditorActivity"
+        android:parentActivityName=".ContentActivity"
+        android:theme="@style/EditorTheme">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".CatalogActivity" />
         <provider
             android:name="com.example.android.inventoryappproject.data.InventoryContantProvider"
-            android:authorities="com.example.android.inventoryappproject.data"
+            android:authorities="com.example.android.inventoryappproject"
             android:exported="false"/>
     </application>
-
-
-
 </manifest>
