modify the   catalog activity and the xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,30 +3,32 @@
     package="com.example.android.inventoryappproject">
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".CatalogActivity"
+        android:theme="@style/EditorTheme">
+        <activity
+            android:name=".CatalogActivity"
             android:label="inventory">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        android:name=".EditorActivity"
-        android:parentActivityName=".ContentActivity"
-        android:theme="@style/EditorTheme">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".CatalogActivity" />
+        <activity
+            android:name=".EditorActivity"
+            android:parentActivityName=".CatalogActivity"
+            android:theme="@style/EditorTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CatalogActivity" />
+        </activity>
         <provider
-            android:name="com.example.android.inventoryappproject.data.InventoryContantProvider"
+            android:name=".data.InventoryContantProvider"
             android:authorities="com.example.android.inventoryappproject"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 </manifest>
